Remove width property in input-time-type-selector.component.scss to prevent taking up extra space

--- a/angular/components/elements/input-time-type-selector/input-time-type-selector.component.scss
+++ b/angular/components/elements/input-time-type-selector/input-time-type-selector.component.scss
@@ -6,7 +6,7 @@
 
 input-time-type-selector {
     @include flex(flex-start, center, row);
-    width: 100%;
+
     input-time-type {
         &:first-child {
             margin-right: $one-percent;
